https and app engine

--- a/037_photo-blog_gorilla/assets/templates/index.html
+++ b/037_photo-blog_gorilla/assets/templates/index.html
@@ -9,7 +9,7 @@
 <p><img src="/assets/imgs/01.jpg"></p>
 <h1>ADD PHOTO</h1>
 <form method="POST" action="http://localhost:8080/" enctype="multipart/form-data">
-    <input type="file" name="data" id="data">
+    <input type="file" name="data">
     <input type="submit">
 </form>
 <p>
