create files for file browser

--- a/051_gcs/12_file-browser/02_browse/templates/index.html
+++ b/051_gcs/12_file-browser/02_browse/templates/index.html
@@ -19,13 +19,13 @@
        Bucket:
        <input type="text" name="bucket">
    </label>
-   <label>
-       Credentials:
-       <textarea name="credentials"
-                 id="credentials"
-                 cols="30"
-                 rows="10"></textarea>
-   </label>
+   <!--<label>-->
+       <!--Credentials:-->
+       <!--<textarea name="credentials"-->
+                 <!--id="credentials"-->
+                 <!--cols="30"-->
+                 <!--rows="10"></textarea>-->
+   <!--</label>-->
    <input type="submit">
 
 </form>
