--- a/052_photo-blog_cookie_memcache_datastore_url_gcs/02_solution/templates/index.html
+++ b/052_photo-blog_cookie_memcache_datastore_url_gcs/02_solution/templates/index.html
@@ -5,27 +5,37 @@
     <title></title>
 </head>
 <body>
-{{if .State}}
+
     <h1>ADD PHOTO</h1>
     <form method="POST" enctype="multipart/form-data">
         <input type="file" name="data">
         <input type="submit">
     </form>
-    <br>
-    <h1>{{.Name}}'s Pictures</h1>
-    <a href="/logout">Log Out</a>
+
+    <h1>PHOTOS</h1>
     <br>
         {{range .Pictures}}
-        <img src="{{.}}"><br>
+        <img src="https://storage.googleapis.com/learning-1130.appspot.com/{{.}}"><br>
+        <br>
         {{end}}
     <br>
-{{else}}
-    <a href="/login">Please Login</a>
-{{end}}
 
-<h1>EVERYTHING SET ID: {{.ID}}</h1>
-<h1><a href="/?id={{.ID}}">HOME AGAIN</a></h1>
-<h1><a href="/retrieve?id={{.ID}}">RETRIEVE</a></h1>
+    <h1>DATA</h1>
+
+    <p>ID:
+        <br>
+        {{.ID}}
+    </p>
+
+    <p>Bucket:
+        <br>
+        {{.Bucket}}
+    </p>
+
+    <p>Pictures:
+        <br>
+        {{.Pictures}}
+    </p>
 
 </body>
 </html>
