entry checker challenge

--- a/054_ajax/03_entry-checker_challenge/02_solution/public/main.css
+++ b/054_ajax/03_entry-checker_challenge/02_solution/public/main.css
@@ -6,7 +6,7 @@ html, body, h1, form, label, input {
 }
 
 * {
-    border: 4px solid hotpink !important;
+    /*border: 4px solid hotpink !important;*/
 }
 
 html, body {
