--- a/059_movie-website_TODO/01_search/templates/layout.gohtml
+++ b/059_movie-website_TODO/01_search/templates/layout.gohtml
@@ -4,7 +4,7 @@
     <title>Movie Information</title>
     <link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-    <link href="/main.css" rel="stylesheet" type="text/css">
+    <link href="/public/main.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="outer-container">
