--- a/059_movie-website_TODO/01_search/templates/search.gohtml
+++ b/059_movie-website_TODO/01_search/templates/search.gohtml
@@ -20,7 +20,7 @@
   <tbody>
 {{range .Movies}}
     <tr>
-      <td>{{.Title}}</td>
+      <td>{{.Title}}: </td>
       <td>{{.Summary}}</td>
     </tr>
 {{end}}
